--- a/app/hero-detail.component.html
+++ b/app/hero-detail.component.html
@@ -7,4 +7,7 @@
     <input [(ngModel)]="hero.name" placeholder="name" />
   </div>
   <button (click)="goBack()">Back</button>
+
+	<h3>Click the parking slot to see the direction</h3>
+   
 </div>
