--- a/app/dashboard.component.html
+++ b/app/dashboard.component.html
@@ -1,8 +1,8 @@
 <h3>Top Destinations</h3>
 <div class="grid grid-pad">
-  <div *ngFor="#hero of heroes" (click)="gotoDetail(hero)" class="col-1-4">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
+  <div *ngFor="#location of locations" (click)="gotoDetail(location)" class="col-1-4">
+    <div class="module location">
+      <h4>{{location.name}}</h4>
     </div>
   </div>
 </div>
